--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "next-intl": "^4.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-syntax-highlighter": "^16.1.0",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.6.0",
     "uuid": "^11.0.3",
@@ -27,6 +28,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.17.0",
     "eslint-config-next": "^16.1.0",
