--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.20.5",
+    "@tanstack/react-virtual": "^3.13.18",
     "clsx": "^2.1.1",
     "idb": "^8.0.1",
     "lucide-react": "^0.468.0",
