--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-table": "^8.20.5",
     "@tanstack/react-virtual": "^3.13.18",
+    "@vercel/analytics": "^1.6.1",
     "clsx": "^2.1.1",
     "idb": "^8.0.1",
     "lucide-react": "^0.468.0",
